--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@ ul.inline-list li {
 						<div class='thumb' style='background-image:url("_images/git-workflow-gitflow.png")'></div>
 						GIT Flow
 					</a></li>
+					
+					<li><a href='python.html'>
+					    <div class='thumb' style='background-image:url("_images/zen-of-python-poster-a3.png")'></div>
+					    Python
+					</li>
 
 					<li><a href='flask.html'>
 						<div class='thumb' style='background-image:url("_images/flask.png")'></div>
