more python things

--- a/python.html
+++ b/python.html
@@ -238,13 +238,10 @@
                     <section>
                         <p>Em Python, uma identação define um bloco.</p>
 
-                        <p class='fragment'>Não tem <code>{</code> / <code>}</code>, não tem <code>end</code>, nada. Só blocos.</p>
+                        <p class='fragment'>Não existe <code>{</code> / <code>}</code>, não existe <code>end</code>, nada. Só identação.</p>
 
                         <img class='fragment' src='_images/zuul.jpg'></img>
                     </section>
-
-					<section>
-					</section>
 				</section>
 
                 <section>
@@ -254,6 +251,8 @@
 
                     <section>
                         <p><pre><code data-trim>
+$ python
+
 Python 2.7.5 (default, Jun 25 2014, 10:19:55) 
 [GCC 4.8.2 20131212 (Red Hat 4.8.2-7)] on linux2
 Type "help", "copyright", "credits" or "license" for more information.
