timetracking with gtg and hamster

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@ ul.inline-list li {
 						<div class='thumb' style='background-image:url("_images/flask.png")'></div>
 						Flask
 					</a></li>
+
+					<li><a href='gtg-hamster.html'>
+						<div class='thumb'></div>
+						GTG + Hamster
+					</a></li>
 				</ul>
 			</div>
 		</div>
