skeleton for a pylnit presentation

--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@ ul.inline-list li {
 						<div class='thumb' style='background-image:url("_images/ajax-sosp-cors-csrf.png")'></div>
 						AJAX/SOSP/CORS/CSRF
 					</a></li>
+
+					<li><a href='pylint.html'>
+						<div class='thumb' style='background-image:url("_images/pylint.png")'></div>
+						Pylint, Warnings e Correções
+					</a></li>
 				</ul>
 			</div>
 		</div>
