added information in the first slide to serve as template for everything else

--- a/pylint.html
+++ b/pylint.html
@@ -57,6 +57,22 @@
 					<section>
 						<h2><code>missing-docstring</code></h2>
 					</section>
+
+					<section>
+						<h2>O que é o erro:</h2>
+						<div style='font-size: 150%'>
+							<p><pre><code data-trim>
+def funcao(valor):
+	return valor * 2
+							</code></pre></p>
+						</div>
+					</section>
+
+					<section>
+						<h2>Solução:</h2>
+
+						<p>Documente suas funções!</p>
+					</section>
 				</section>
 
 				<section>
